Fixed alignments

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -106,7 +106,6 @@
 		}
 
 		@include breakpoint('<=xsmall') {
-			padding: 0;
 		}
 	}
 
