--- a/src/sass/components/_tabs.scss
+++ b/src/sass/components/_tabs.scss
@@ -28,6 +28,10 @@
 				z-index: 0;
 			}
 
+			&:after{
+				content: ''
+			}
+
 			> .title {
 				@include vendor('transition-property', 'color, background-color, box-shadow');
 				@include vendor('transition-duration', '#{_duration(transition)}');
